--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@splidejs/vue-splide": "^0.3.5",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-virtual-scroller": "^1.0.10",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
